# Memex

./: .env.example  .gitignore  PLAN.md  README.md  compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0e29bd348b25_add_chunk_model.py  0ee99c4a6f7a_init_all_tables.py  182ac23a4e88_init.py
backend/app/api/: __init__.py  deps.py  main.py
backend/app/api/routes/: auth.py  chat.py  document.py  utils.py
backend/app/core/: __init__.py  celery_app.py  celery_db.py  config.py  db.py  providers.py  security.py
backend/app/enums/: __init__.py  document.py  message.py
backend/app/models/: __init__.py  chat_session.py  chunk.py  document.py  message.py  user.py
backend/app/providers/: __init__.py
backend/app/providers/embeddings/: bge.py  protocol.py  voyageai.py
backend/app/providers/llm/: groq.py  protocol.py
backend/app/repositories/: __init__.py  chat_session.py  chunk.py  document.py  message.py  user.py
backend/app/schemas/: __init__.py  auth_schemas.py  chat_cursor.py  chat_session.py  document.py  message.py  message_cursor.py  reset_password.py  search_result.py  user.py
backend/app/services/: __init__.py  auth.py  chat_service.py  chat_session_service.py  chunking.py  document.py  embedding.py  llm.py  message.py  parser.py  qdrant.py  s3.py  search_service.py  utils.py
backend/app/tasks/: document.py
backend/app/workflows/: __init__.py  document.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py
backend/tests/unit/: test_security.py
