[project]
name = "memex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "pydantic>=2.13.4",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "uvicorn>=0.47.0",
]
