[project]
name = "memex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=3.7.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "llama-cloud==2.8.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "qdrant-client>=1.18.0",
    "redis>=7.4.0",
    "torch",
    "sentence-transformers<3.0.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "tiktoken>=0.13.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "faker>=40.19.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true